# hiramu-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  rust.yml  rust_cheks.yml
documentation/: IMP_MAIN.md  PRODUCT.md  TECHNICAL_SPEC.md  TECHNICAL_SPEC_PROMPT.md
src/: config.rs  error.rs  lib.rs  main.rs  model.rs  model_alias.rs  provider.rs  version.rs
src/generator/: claude_generator.rs  mistral_generator.rs  mod.rs  ollama_provider.rs
src/utils/: mod.rs
