[package]
name = "hiramu-cli"
version = "0.1.14"
edition = "2021"
description = "A command-line interface tool for interacting with large language models (LLMs) on AWS Bedrock and generating text based on prompts."
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive","cargo"] }
futures-util = "0.3.30"
hiramu = "0.1.14"
serde = "1.0.198"
thiserror = "1.0.58"
tokio = "1.37.0"
toml = "0.8.12"
